--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,6 @@ script:
 - which php
 - ls /usr/bin/php
 - /usr/bin/php -r 'echo "a";'
+- chmod +x scriptt.sh
 - ./scriptt.sh
 - if [[ "$PRECISE" == "new" ]]; then /usr/bin/php; fi
