--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
 
 before_install:
 - sudo apt-add-repository -y ppa:travis-ci/sqlite3
-- sudo apt-get -y update
+- sudo apt-get -y update && sudo apt-get upgrade
 - sudo apt-get -y install sqlite3=3.7.15.1-1~travis1
 
 script: true
