--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ before_deploy:
 
 
 deploy:
-  - provider: releases
+  - provider: pages
     skip_cleanup: true
-    api_key: $GITHUB_TOKEN
+    github-token: $GITHUB_TOKEN
     on:
       repo: iriberri/precise-update
       condition: $TRAVIS_COMMIT_MESSAGE = *"$AUTO_DEPLOY_STR"*
